--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,3 +1,19 @@
-body {
-    background-color: red;
+@import url('https://fonts.googleapis.com/css2?family=Karla&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    border:none;
+}
+
+header{font-family:Karla, sans-serif;
+    background-color: tan;
+    color: oldlace;
+    font-size: 200%;
+    text-align: center;
+}
+body{
+    background-color: tan;
+    color: oldlace;
+
 }
