add basic structure and try to add images to both sides of h1

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -12,6 +12,10 @@ header{font-family:Karla, sans-serif;
     font-size: 200%;
     text-align: center;
 }
+
+#sneakercentralleft {
+    background: url(../images/sneakercentralleft.jpeg);
+}
 body{
     background-color: tan;
     color: oldlace;
