--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -21,3 +21,15 @@ body{
     color: oldlace;
 
 }
+h2{
+    padding: 30px;
+    text-align: center;
+    font-size: 170%
+}
+p{
+    text-align: center;
+}
+.img{
+    max-height: 33%;
+    max-width: 33%;
+}
